@@ -2,6 +2,7 @@
 
 	* tests/zlib.test: Use nonblocking writes in single-threaded IO
 	tests to avoid deadlocks when going beyond OS buffers [Bug 3428756].
+	Tidy up [chan configure] flags across zlib.test.
 
 2011-11-03  Donal K. Fellows  <dkf@users.sf.net>
 
